<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageRecycler"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/bs"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:layout_below="@+id/imageRecycler">

        <TextView
            android:id="@+id/textNamabuah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"/>

        <TextView
            android:id="@+id/textDesc"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/close"/>


    </LinearLayout>

</RelativeLayout>