<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".HitungUmur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:padding="20dp">
        <EditText
            android:id="@+id/tahunLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tahun_lahir"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnHitug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hitung"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnmovetoListview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listview"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>